// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelItems renders empty 1`] = `
<div>
  <div
    class="sc-jKJlTe hdlIzF"
  >
    <h5
      class="sc-ckVGcZ bQFPIr"
    >
      Node Labels
    </h5>
    <div
      class="sc-eNQAEJ ibJZZP"
    >
      <p>
        There are no labels in database
      </p>
    </div>
  </div>
</div>
`;

exports[`LabelItems renders labels 1`] = `
<div>
  <div
    class="sc-jKJlTe hdlIzF"
  >
    <h5
      class="sc-ckVGcZ bQFPIr"
    >
      Node Labels
    </h5>
    <div
      class="sc-eNQAEJ ibJZZP"
    >
      <div
        class="sc-gZMcBi sc-gqjmRU bszfIc"
        data-testid="sidebarMetaItem"
      >
        *(5)
      </div>
      <div
        class="sc-gZMcBi sc-gqjmRU bszfIc"
        data-testid="sidebarMetaItem"
      >
        MyLabel
      </div>
      <div
        class="sc-gZMcBi sc-gqjmRU bszfIc"
        data-testid="sidebarMetaItem"
      >
        MyLabel2
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders empty 1`] = `
<div>
  <div
    class="sc-jKJlTe hdlIzF"
  >
    <h5
      class="sc-ckVGcZ bQFPIr"
    >
      Property Keys
    </h5>
    <div
      class="sc-eNQAEJ ibJZZP"
    >
      <p>
        There are no properties in database
      </p>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders properties 1`] = `
<div>
  <div
    class="sc-jKJlTe hdlIzF"
  >
    <h5
      class="sc-ckVGcZ bQFPIr"
    >
      Property Keys
    </h5>
    <div
      class="sc-eNQAEJ ibJZZP"
    >
      <div
        class="sc-gZMcBi sc-jTzLTM kqjkqn"
        data-testid="sidebarMetaItem"
      >
        prop1
      </div>
      <div
        class="sc-gZMcBi sc-jTzLTM kqjkqn"
        data-testid="sidebarMetaItem"
      >
        prop2
      </div>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders empty 1`] = `
<div>
  <div
    class="sc-jKJlTe hdlIzF"
  >
    <h5
      class="sc-ckVGcZ bQFPIr"
    >
      Relationship Types
    </h5>
    <div
      class="sc-eNQAEJ ibJZZP"
    >
      <p>
        No relationships in database
      </p>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders relationshipTypes 1`] = `
<div>
  <div
    class="sc-jKJlTe hdlIzF"
  >
    <h5
      class="sc-ckVGcZ bQFPIr"
    >
      Relationship Types
    </h5>
    <div
      class="sc-eNQAEJ ibJZZP"
    >
      <div
        class="sc-gZMcBi sc-VigVT hzykkh"
        data-testid="sidebarMetaItem"
      >
        *(5)
      </div>
      <div
        class="sc-gZMcBi sc-VigVT hzykkh"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE
      </div>
      <div
        class="sc-gZMcBi sc-VigVT hzykkh"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE2
      </div>
    </div>
  </div>
</div>
`;
